--- a/style2.css
+++ b/style2.css
@@ -605,7 +605,7 @@
   font-size: 24px;
   line-height: 24px;
   font-weight: 700;
-  color: #ef5b70;
+  color: #f16d7f;
   margin-bottom: 43px;
 }
 .slider__filter {
@@ -725,17 +725,17 @@
   border: 1px solid #ef5b70;
 }
 .slider__icon {
-  fill: #ef5b70;
+  fill: #f16d7f;
 }
 .slider__button-text {
   font-family: Lato;
   font-size: 16px;
   line-height: 1.2;
   font-weight: 700;
-  color: #ef5b70;
+  color: #f16d7f;
 }
 .slider__button:hover {
-  background: #ef5b70;
+  background: #f16d7f;
   transition: all 0.5s;
 }
 .slider__button:hover .slider__icon {
@@ -761,7 +761,7 @@
 .stick__center {
   width: 63px;
   height: 3px;
-  background-color: #ef5b70;
+  background-color: #f16d7f;
   position: absolute;
 }
 
