--- a/style4.css
+++ b/style4.css
@@ -546,6 +546,7 @@
   font-weight: 700;
   text-transform: uppercase;
   color: #222222;
+  cursor: pointer;
 }
 .checkout__summary:hover {
   color: #f16d7f;
