--- a/style3.scss
+++ b/style3.scss
@@ -44,7 +44,13 @@ $colorBrend: #f16d7f;
     background-color: #ffffff;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
    
+    &__right-container{
+        display: flex;
+        align-items: center;
+    }
 
     &__searche{
         display: flex;
@@ -201,7 +207,7 @@ $colorBrend: #f16d7f;
     &__right{
         display: flex;
         gap: 26px;
-        margin-left: 349px;
+        // margin-left: 349px;
         align-items: flex-end;
     }
 
@@ -223,8 +229,6 @@ $colorBrend: #f16d7f;
     }
 
     &__right-button{
-        // padding-top: 44px;
-        // padding-bottom: 42px;
         width: 130px;
         height: 38px;
         background-color: $colorBrend;
@@ -292,7 +296,6 @@ $colorBrend: #f16d7f;
         top: 85px;  
         z-index: 1;
         display: flex;
-        // gap: 16px;
         flex-direction: column;
         margin-left: -35px;
     }
@@ -304,8 +307,6 @@ $colorBrend: #f16d7f;
         width: 10px;
         position: absolute;
         background-color:#ffffff;
-        // border-top:  1px solid #e8e8e8;
-        // border-left:  1px solid #e8e8e8;
         transform: rotate(45deg);
         top: -6px;
         left: 50px;
@@ -451,8 +452,9 @@ $colorBrend: #f16d7f;
         display: flex;
         gap: 40px;
         justify-content: center;
-        height: 51px;
+        min-height: 51px;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     &__li{
@@ -556,8 +558,6 @@ $colorBrend: #f16d7f;
         box-shadow: 3px 3px 3px 1px grey;
     }
 
-  
-
     &__last:hover &__container{
         right: 0;
         left: auto;
@@ -580,6 +580,7 @@ $colorBrend: #f16d7f;
     display: flex;
     align-items: center; 
     justify-content: space-between;
+    flex-wrap: wrap;
 
     &__title{
         font-family: Lato;
@@ -650,6 +651,7 @@ $colorBrend: #f16d7f;
     display: flex;
     gap: 49px;
     position: relative;
+    flex-wrap: wrap;
 
     &__left{
         display: flex;
@@ -751,6 +753,7 @@ $colorBrend: #f16d7f;
 
     &__choice{
         display: flex;
+        flex-wrap: wrap;
     }
 
     &__trend{
@@ -1026,6 +1029,7 @@ $colorBrend: #f16d7f;
         justify-content: space-between;
         margin-top: 43px;
         transform: all 2s;
+        flex-wrap: wrap;
     }
 
     &__bottom-link{
@@ -1098,6 +1102,7 @@ $colorBrend: #f16d7f;
     padding-top: 89px;
     padding-bottom: 114px;
     text-align: center;
+    flex-wrap: wrap;
    
     &__block{
        display: inline-block;
@@ -1175,7 +1180,7 @@ $colorBrend: #f16d7f;
 
 .subscription {
     background-image: url(./img2/background-subscription.png);
-    height: 438px;
+    min-height: 438px;
     background-color: rgba(242,242,242,0.5);
     background-size: cover;
     background-blend-mode: overlay;
@@ -1183,6 +1188,7 @@ $colorBrend: #f16d7f;
     display: flex;
     gap: 165px;
     align-items: center; 
+    flex-wrap: wrap;
     
     &__figure{
         display: flex;
@@ -1330,6 +1336,7 @@ $colorBrend: #f16d7f;
     padding-bottom: 89px;
     display: flex;
     gap: 64px;
+    flex-wrap: wrap;
 
     &__description{
         display: flex;
@@ -1354,6 +1361,7 @@ $colorBrend: #f16d7f;
     &__subdivision{
         display: flex;
         gap: 24px;
+        flex-wrap: wrap;
     }
 
     &__block{
@@ -1398,6 +1406,7 @@ $colorBrend: #f16d7f;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     
 
     &__text{
