--- a/style.css
+++ b/style.css
@@ -39,6 +39,12 @@
   background-color: #ffffff;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.header__right-container {
+  display: flex;
+  align-items: center;
 }
 .header__searche {
   display: flex;
@@ -167,7 +173,6 @@
 .header__right {
   display: flex;
   gap: 26px;
-  margin-left: 349px;
   align-items: flex-end;
 }
 .header .hover_svg {
@@ -369,8 +374,9 @@
   display: flex;
   gap: 40px;
   justify-content: center;
-  height: 51px;
+  min-height: 51px;
   align-items: center;
+  flex-wrap: wrap;
 }
 .navigation__li {
   list-style-type: none;
@@ -512,8 +518,9 @@
   padding-bottom: 100px;
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 560px 560px;
+  grid-template-columns: repeat(auto-fit, 560px);
   grid-template-rows: 261px 261px 261px;
+  justify-content: center;
 }
 .categories__block {
   position: relative;
@@ -524,11 +531,15 @@
 }
 .categories_first {
   grid-row: 1/3;
-  grid-column: 1/2;
 }
 .categories_second {
   grid-row: 3/4;
-  grid-column: 1/2;
+}
+.categories_third {
+  grid-row: 1/2;
+}
+.categories_forth {
+  grid-row: 2/4;
 }
 .categories__title {
   position: absolute;
@@ -581,6 +592,7 @@
   display: grid;
   gap: 30px;
   grid-template-columns: repeat(auto-fit, 261px);
+  justify-content: center;
 }
 .future__block {
   position: relative;
@@ -695,20 +707,19 @@
 .guaranties {
   padding-bottom: 97px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .guaranties__photo {
-  height: 529px;
+  min-width: 65%;
 }
 .guaranties__articles {
   min-width: 373px;
-  height: 529px;
   background-color: #222224;
 }
 .guaranties__block {
-  margin-left: 36px;
   display: flex;
-  gap: 33px;
-  align-items: flex-start;
+  justify-content: space-around;
   padding-top: 48px;
   margin-bottom: 2px;
   transition: all 2s;
@@ -745,12 +756,14 @@
 
 .subscription {
   background-image: url(./img2/background-subscription.png);
-  height: 438px;
+  min-height: 438px;
   background-color: rgba(242, 242, 242, 0.5);
   background-size: cover;
   background-blend-mode: overlay;
   background-position: bottom;
   display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 165px;
   align-items: center;
 }
@@ -876,7 +889,9 @@
   padding-top: 109px;
   padding-bottom: 89px;
   display: flex;
+  flex-wrap: wrap;
   gap: 64px;
+  justify-content: center;
 }
 .inform__description {
   display: flex;
@@ -898,6 +913,8 @@
 .inform__subdivision {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .inform__block {
   width: 200px;
@@ -934,6 +951,7 @@
   padding-bottom: 23px;
   background-color: #e6e6e6;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
