--- a/style.scss
+++ b/style.scss
@@ -44,7 +44,13 @@ $colorBrend: #f16d7f;
     background-color: #ffffff;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
    
+    &__right-container{
+        display: flex;
+        align-items: center;
+    }
 
     &__searche{
         display: flex;
@@ -201,7 +207,7 @@ $colorBrend: #f16d7f;
     &__right{
         display: flex;
         gap: 26px;
-        margin-left: 349px;
+        // margin-left: 349px;
         align-items: flex-end;
     }
 
@@ -446,8 +452,9 @@ $colorBrend: #f16d7f;
         display: flex;
         gap: 40px;
         justify-content: center;
-        height: 51px;
+        min-height: 51px;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     &__li{
@@ -622,8 +629,9 @@ $colorBrend: #f16d7f;
     padding-bottom: 100px;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: 560px 560px;
+    grid-template-columns: repeat(auto-fit, 560px);
     grid-template-rows: 261px 261px 261px;
+    justify-content: center;
     
    
     &__block{
@@ -637,12 +645,22 @@ $colorBrend: #f16d7f;
 
     &_first{
         grid-row: 1/3;
-        grid-column: 1/2;
+        // grid-column: 1/2;
     }
 
     &_second{
         grid-row: 3/4;
-        grid-column: 1/2;
+        // grid-column: 1/2;
+    }
+
+    &_third{
+        grid-row: 1/2;
+        // grid-column: 1/2;
+    }
+
+    &_forth{
+        grid-row: 2/4;
+        // grid-column: 1/2;
     }
 
     &__title{
@@ -703,6 +721,7 @@ $colorBrend: #f16d7f;
         display: grid;
         gap: 30px;
         grid-template-columns: repeat(auto-fit, 261px);
+        justify-content: center;
     }
 
     &__block{
@@ -839,22 +858,25 @@ $colorBrend: #f16d7f;
 .guaranties{
     padding-bottom: 97px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 
     &__photo{
-        height: 529px;
+        min-width: 65%;
     }
 
     &__articles{
         min-width: 373px;
-        height: 529px;
+        // height: 529px;
         background-color: #222224;
     }
 
     &__block{
-        margin-left: 36px;
+        // margin-left: 36px;
         display: flex;
-        gap: 33px;
-        align-items: flex-start;
+        // gap: 33px;
+        justify-content: space-around;
+        // align-items: flex-start;
         padding-top: 48px;
         margin-bottom: 2px;
         transition: all 2s;   
@@ -897,12 +919,14 @@ $colorBrend: #f16d7f;
 
 .subscription {
     background-image: url(./img2/background-subscription.png);
-    height: 438px;
+    min-height: 438px;
     background-color: rgba(242,242,242,0.5);
     background-size: cover;
     background-blend-mode: overlay;
     background-position: bottom;
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 165px;
     align-items: center; 
     
@@ -1051,12 +1075,15 @@ $colorBrend: #f16d7f;
     padding-top: 109px;
     padding-bottom: 89px;
     display: flex;
+    flex-wrap: wrap;
     gap: 64px;
+    justify-content: center;
 
     &__description{
         display: flex;
         flex-direction: column;
         gap: 29px;
+       
     }
 
     &__text{
@@ -1076,6 +1103,8 @@ $colorBrend: #f16d7f;
     &__subdivision{
         display: flex;
         gap: 24px;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 
     &__block{
@@ -1118,6 +1147,7 @@ $colorBrend: #f16d7f;
     padding-bottom: 23px;
     background-color: #e6e6e6;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     
