--- a/style5.css
+++ b/style5.css
@@ -39,6 +39,12 @@
   background-color: #ffffff;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.header__right-container {
+  display: flex;
+  align-items: center;
 }
 .header__searche {
   display: flex;
@@ -167,13 +173,19 @@
 .header__right {
   display: flex;
   gap: 26px;
-  margin-left: 349px;
   align-items: flex-end;
+}
+.header .hover_svg {
+  fill: #222222;
+}
+.header__basket-details[open] .hover_svg {
+  fill: #f16d7f;
 }
 .header__basket {
   width: 32px;
   height: 29px;
   fill: #a4a4a4;
+  display: flex;
 }
 .header__right-button {
   width: 130px;
@@ -211,15 +223,11 @@
   fill: #f16d7f;
   transition: all 0.3s;
 }
-.header__basket {
-  display: flex;
-}
 .header .header__right-details[open] .header__right-text {
   color: #f16d7f;
 }
 .header .header__right-details[open] .header__right-img {
   fill: #f16d7f;
-  transform: rotate(180deg);
 }
 .header .header__right-details[open] .header__right-button {
   background-color: #ffffff;
@@ -235,7 +243,18 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  margin-left: -80px;
+  margin-left: -35px;
+}
+.header__right-box::before {
+  content: " ";
+  display: block;
+  height: 10px;
+  width: 10px;
+  position: absolute;
+  background-color: #ffffff;
+  transform: rotate(45deg);
+  top: -6px;
+  left: 50px;
 }
 .header__right-item {
   display: flex;
@@ -355,8 +374,9 @@
   display: flex;
   gap: 40px;
   justify-content: center;
-  height: 51px;
+  min-height: 51px;
   align-items: center;
+  flex-wrap: wrap;
 }
 .navigation__li {
   list-style-type: none;
@@ -459,6 +479,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .arrival__title {
   font-family: Lato;
@@ -611,6 +632,7 @@
 .basket__buttons {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 .basket__button {
   font-family: Lato;
@@ -763,7 +785,7 @@
 
 .subscription {
   background-image: url(./img2/background-subscription.png);
-  height: 438px;
+  min-height: 438px;
   background-color: rgba(242, 242, 242, 0.5);
   background-size: cover;
   background-blend-mode: overlay;
@@ -771,6 +793,7 @@
   display: flex;
   gap: 165px;
   align-items: center;
+  flex-wrap: wrap;
 }
 .subscription__figure {
   display: flex;
@@ -895,6 +918,7 @@
   padding-bottom: 89px;
   display: flex;
   gap: 64px;
+  flex-wrap: wrap;
 }
 .inform__description {
   display: flex;
@@ -916,6 +940,7 @@
 .inform__subdivision {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
 }
 .inform__block {
   width: 200px;
@@ -954,6 +979,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 .footer__text {
   font-family: Lato;
